; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_core.c_r_core_sleep_begin.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_core.c_r_core_sleep_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @r_core_sleep_begin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @r_core_sleep_begin(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i8* @r_core_task_self(i32* %4)
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @r_core_task_sleep_begin(i8* %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i8*, i8** %3, align 8
  ret i8* %12
}

declare dso_local i8* @r_core_task_self(i32*) #1

declare dso_local i32 @r_core_task_sleep_begin(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
